<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/search_button"
        android:hint="@string/search_text"
        android:inputType="text" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/search_select_category"
        android:layout_alignParentRight="true"
        android:text="@string/search_button" />

    <TextView
        android:id="@+id/search_select_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_text"
        android:text="@string/search_select_category" />

    <Spinner
        android:id="@+id/search_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_select_category"
        android:prompt="@string/search_category_prompt" />

    <TextView
        android:id="@+id/search_select_subCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_category"
        android:text="@string/search_select_subcategory" />

    <Spinner
        android:id="@+id/search_subCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_select_subCategory"
        android:prompt="@string/search_subcategory_prompt" />

    <ListView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_subCategory" >
    </ListView>

</RelativeLayout>